# spadina

./: .gitignore  Cargo.lock.orig  Cargo.toml  LICENSE.txt  README.md  background-admin.md  background-dev.md  background-player.md  background-writer.md  gen-windows-icon  generate-config  glossary.md  puzzle-pieces.md  puzzleverse.service  rustfmt.toml  spadina.desktop  spadina.service
.github/workflows/: release.yml  rust.yml
asset-tool/: Cargo.toml
asset-tool/src/: main.rs
client/: Cargo.toml
client/src/: altitude_mixer.rs  configuration.rs  convert.rs  gradiator.rs  jitter.rs  lib.rs  main.rs  materials.rs  native.rs  spray.rs  update_handler.rs  user_interface.rs  web.rs
client/src/editor/: writer.rs
client/src/server/: active_connection.rs  cache.rs  direct_message.rs  exports.rs  mod.rs  peer.rs  updates.rs
client/src/state/: cache.rs  connection.rs  emote_cache.rs  jitter.rs  location.rs  mod.rs  mutator.rs
client/src/world/: load_realm.rs  realminfo
client/wix/: main.wxs
clientcore/: Cargo.toml
console-client/: Cargo.toml
console-client/src/: main.rs
core/: Cargo.toml
core/src/: access.rs  asset.rs  asset_store.rs  atomic_clock.rs  auth.rs  avatar.rs  capabilities.rs  communication.rs  lib.rs  location.rs  net.rs  player.rs  puzzle.rs  realm.rs  reference_converter.rs  resource.rs  self_hosted.rs  shared_ref.rs
core/src/asset/: extraction.rs  gradiator.rs  mod.rs  puzzle.rs  rules.rs  variants.rs
core/src/asset_store/: file_system_asset_store.rs  mod.rs
core/src/controller/: boxed_template.rs  editor.rs  mod.rs  serde_controller.rs
core/src/controller/puzzle/: action.rs  area.rs  mod.rs
core/src/controller/puzzle/state_machine/: edge_action.rs  error.rs  mod.rs  state.rs  timer_transition.rs  transition.rs
core/src/controller/puzzle/state_machine/expression/: holiday.rs  mod.rs
core/src/location/: change.rs  communication.rs  directory.rs  mod.rs  protocol.rs  target.rs
core/src/net/: calendar.rs  mixed_connection.rs  mod.rs
core/src/net/server/: administration.rs  auth.rs  hosting.rs  mod.rs
core/src/realm/: mod.rs  room_world.rs
core/src/scene/: angle.rs  gradiator.rs  mod.rs  value.rs
core/src/tracking_map/: mod.rs  oneshot_timeout.rs
core/src/user_interface/: mod.rs
gui-client/: Cargo.toml  build.rs
gui-client/wix/: main.wxs
server/: Cargo.toml  diesel-oidc.toml  diesel-otp.toml  rebuild-schema
server/migrations/00000000000001_base/: down.sql  up.sql
server/migrations/00000000000001_puzzleverse_base/: down.sql  up.sql
server/migrations/2020-03-01-143838_initial/: down.sql  up.sql
server/oidc-migrations/00000000000001_base/: down.sql  up.sql
server/otp-migrations/00000000000001_base/: down.sql  up.sql
server/src/: access.rs  aggregating_map.rs  asset_store.rs  atomic_activity.rs  avatar.rs  client.rs  config.rs  database.rs  html.rs  join_request.rs  location_search.rs  main.rs  map.rs  metrics.rs  peer.rs  player_event.rs  player_location_update.rs  player_state.rs  prometheus_future.rs  schema.rs  server_controller_template.rs  shstr.rs  stream_map.rs  unix_socket.rs  views.rs
server/src/accounts/: configuration.rs  db_policy.rs  ldap.rs  mod.rs
server/src/accounts/db_auth/: mod.rs  schema_oidc.rs  schema_otp.rs
server/src/accounts/login/: mod.rs
server/src/accounts/login/openid/: configuration.rs  db_oidc.rs  mod.rs  net.rs
server/src/accounts/login/password/: db_otp.rs  fixed_otp.rs  fixed_password.rs  mod.rs  otp.rs  php_bb.rs  uru.rs
server/src/accounts/policy/: mod.rs
server/src/asset_store/: google.rs  manager.rs  mod.rs  s3.rs
server/src/auth/: db_oidc.rs  db_oidc_multiple.rs  db_otp.rs  fixed_otp.rs  fixed_password.rs  kerberos.rs  ldap.rs  mod.rs  php_bb.rs  uru.rs
server/src/client/: hosting.rs  idle_timer.rs  incremental_search.rs  location.rs  mod.rs  online.rs
server/src/database/: avatar.rs  connect.rs  database_location.rs  database_location_directory.rs  diesel_serde_jsonb.rs  location_persistence.rs  location_scope.rs  mod.rs  persisted.rs  player_access.rs  player_persistence.rs  player_reference.rs  realm_scope.rs  schema.rs  setting.rs
server/src/destination/: activity.rs  asset_manager.rs  manager.rs  mod.rs  self_hosted.rs
server/src/directory/: location_endpoint.rs  mod.rs  peer_directory.rs  player_directory.rs
server/src/gc_map/: mod.rs  time_use.rs  waiting.rs
server/src/http/: jwt.rs  mod.rs  ssl.rs  websocket.rs
server/src/http_server/: calendar.rs  jwt.rs  mod.rs  public_key_login.rs  ssl.rs  websocket.rs
server/src/peer/: active_search.rs  from_peer.rs  handshake.rs  message.rs  mod.rs  net.rs  on_peer.rs  outstanding_message.rs  reconnection_timer.rs  stream.rs
server/src/prometheus_locks/: labelled_mutex.rs  labelled_rwlock.rs  mod.rs  mutex.rs  rwlock.rs
server/src/puzzle/: arithmetic.rs  buffer.rs  button.rs  clock.rs  comparator.rs  counter.rs  cycle_button.rs  dial.rs  event_sink.rs  holiday.rs  index.rs  index_list.rs  logic.rs  map_sink.rs  metronome.rs  mod.rs  permutation.rs  proximity.rs  radio_button.rs  realm_selector.rs  sink.rs  switch.rs  timer.rs
server/src/realm/: convert.rs  mod.rs  navigation.rs  output.rs  persistence.rs
server/src/realm/puzzle/: arithmetic.rs  buffer.rs  button.rs  clock.rs  comparator.rs  counter.rs  cycle_button.rs  event_sink.rs  holiday.rs  index.rs  index_list.rs  logic.rs  map_sink.rs  metronome.rs  mod.rs  permutation.rs  proximity.rs  radio_button.rs  realm_selector.rs  sink.rs  switch.rs  timer.rs
server/src/socket_entity/: mod.rs  net.rs
server/src/tracking_map/: oneshot_timeout.rs
webclient/: Cargo.toml
