[package]
name = "spadina-client"
version = "0.1.0"
authors = ["Andre Masella <andre@masella.name>"]
edition = "2021"

[dependencies]
addr = "^0.15"
derivative = "^2.2"
form_urlencoded = "^1.0"
futures = "^0.3"
futures-sink = "^0.3"
hex = "^0.4"
itertools = "^0.12"
lru = '^0.10'
pathfinding = "^4.2"
pin-project = '^1.1'
rmp = "^0.8"
rmp-serde = "^1.1"
serde_json = "^1.0"
sha3 = "^0.10"
webbrowser = "^0.8"
parking_lot = "^0.12"
[dependencies.chrono]
version = "^0.4"
features = ["serde"]

[dependencies.spadina-core]
path = "../core"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
alerts = "^0.1"
argparse = "^0.2"
bytes = "^1.0"
directories = "^5.0"
hyper-tls = "^0.6"
openssl = "^0.10"
rand = "^0.8"
self_update = {version = "^0", features = ["archive-zip", "compression-zip-deflate", "rustls" ]}
tokio = {version="^1.35", features=["default", "macros", "rt-multi-thread"]}
tokio-tungstenite = "^0.21"


[target."cfg(not(target_arch = \"wasm32\"))".dependencies.hyper]
version = "^1.1"
features = [
    "client",
    "http1",
]
[target."cfg(target_arch = \"wasm32\")".dependencies]
wasm-bindgen = "^0.2"

[target."cfg(target_arch = \"wasm32\")".dependencies.stdweb]
version = "^0.4"
features = ["futures-support"]
