[package]
name = "puzzleverse-client-core"
version = "0.1.0"
authors = ["Andre Masella <andre@masella.name>"]
edition = "2018"
crate-type = ["rlib"]

[dependencies]
amethyst = "0.13.0"
puzzleverse-core = { path = "../core" }
tokio-tungstenite = "0.10.1"
tungstenite = "0.10.1"

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]
