[package]
name = 'spadina-core'
version = '0.1.0'
authors = ['Andre Masella <andre@masella.name>']
edition = '2021'

[dependencies]
addr = "^0.15"
async-trait = '^0.1'
futures = '^0.3'
gltf = '^1.0'
hex = '^0.4'
http = '^0.2'
idna = "^0.3"
lazy_static = "^1.4"
percent-encoding = "^2.2"
pin-project = '^1.0'
rand = {version='^0.8', features=["small_rng"]}
rand_distr = '^0.4'
read-restrict = '^0.3'
regex = { version = "^1.5", features = ["unicode"] }
rmp-serde = '^1.0'
serde_json = '^1.0'
serde_with = { version = '^2.0', features = ["json", "base64"] }
serde_urlencoded = '^0.7'
sha3 = '^0.10'
tokio-tungstenite = '^0.18'
unicode-normalization = '^0.1'
url = "^2.2"
zstd = "^0.12"

[dependencies.chrono]
version = '^0.4'
features = ['serde']

[dependencies.hyper]
version = '^0.14'
features = [
    'stream',
    'http1',
]

[dependencies.serde]
version = '^1.0'
features = ['derive']

[dependencies.tokio]
version = '^1.0'
features = ['full']
