[package]
name = 'spadina-core'
version = '0.1.0'
authors = ['Andre Masella <andre@masella.name>']
edition = '2021'

[dependencies]
addr = "^0.15"
base64 = "0.21.5"
futures = '^0.3'
gltf = '^1.0'
hex = '^0.4'
http = '^1.0'
hyper-util = '^0.1'
idna = "^0.5"
int-enum = '^1.0'
lazy_static = "^1.4"
msgpack-rpc = '^0.4'
percent-encoding = "^2.2"
pin-project = '^1.0'
prometheus-client = '^0.22'
rand = {version='^0.8', features=["small_rng"]}
rand_distr = '^0.4'
read-restrict = '^0.3'
regex = { version = "^1.5", features = ["unicode"] }
replace_with = "^0.1"
rmp-serde = '^1.0'
serde_json = '^1.0'
serde_urlencoded = '^0.7'
serde_with = { version = '^3.4', features = ["json", "base64", "chrono_0_4"] }
sha3 = '^0.10'
tokio-tungstenite = '^0.21'
unicode-normalization = '^0.1'
url = "^2.2"
zstd = "^0.13"

[dependencies.chrono]
version = '^0.4'
features = ['serde']

[dependencies.chrono-tz]
version = "^0.8"
features = ['serde']

[dependencies.hyper]
version = '^1.1'
features = [
    'http1',
]

[dependencies.serde]
version = '^1.0'
features = ['derive']

[dependencies.tokio]
version = '^1.0'
features = ['full']
