[package]
name = 'puzzleverse-server'
version = '0.1.0'
authors = ['Andre Masella <andre@masella.name>']
edition = '2018'

[features]
wasm-client = []

[dependencies]
argparse = '^0.2'
async-trait = '^0.1'
base64 = '^0.13'
bdays = '^0.1'
build_id = '^0.2'
byteorder = '^1.4'
bytes = '^1.0'
diesel_migrations = '^1.4'
form_urlencoded = '^1.0'
futures = '^0.3'
futures-sink = '^0.3'
hex = '^0.4'
horrorshow = '^0.8'
http = '^0.2'
hyper-tls = '^0.5'
jsonwebtoken = '^7.2'
lazy_static = '^1.4'
native-tls = '^0.2'
notify = '^4.0'
num-integer = '^0.1'
otpauth = '^0.4'
prometheus = '^0.11'
r2d2 = '^0.8'
rand = '^0.8'
rmp = '^0.8'
rmp-serde = '^0.15'
serde_json = '^1.0'
sha3 = '^0.9'
slotmap = '^0.4'
tokio-native-tls = '^0.3'
tokio-tungstenite = '^0.13'
tungstenite = '^0.12'

[dependencies.chrono]
version = '^0.4'
features = ['serde']

[dependencies.diesel]
version = '^1.4'
features = [
    'chrono',
    'postgres',
    'r2d2',
]

[dependencies.hyper]
version = '^0.14'
features = [
    'client',
    'server',
    'stream',
    'http2',
]

[dependencies.puzzleverse-core]
path = '../core'

[dependencies.serde]
version = '^1.0'
features = ['derive']

[dependencies.sha1]
version = '^0.6'
features = ['std']

[dependencies.tokio]
version = '^1.0'
features = ['full']
