[package]
name = 'spadina-server'
version = '0.1.0'
authors = ['Andre Masella <andre@masella.name>']
edition = '2021'

[features]
default = ["mysql", "postgres"]
wasm-client = []
mysql = ['diesel/mysql']
postgres = ["diesel/postgres"]

[dependencies]
argparse = '^0.2'
async-trait = "^0.1"
base16ct = {version = '^0.2', features = ['alloc']}
base64 = '^0.22'
bb8 = "^0.9"
cooked-waker = '^5.0'
diesel_migrations = '^2.1'
form_urlencoded = '^1.2'
futures = { version = '^0.3', features = ['alloc'] }
futures-batch = '^0.6'
git-version = "^0.3"
google-cloud-storage = "^0.23"
horrorshow = '^0.8'
http-body-util = "^0.1"
hyper-util = '^0.1'
icalendar = '^0.16'
icu = { version = "1.5.0", features = ["std", "sync", "serde"] }
jsonwebtoken = '^9.2'
lazy_static = '^1.4'
ldap3 = '^0.11'
libsqlite3-sys = { version = "0.30.1", features = ["bundled", "bundled-windows"] }
native-tls = '^0.2'
notify = '^7.0'
openidconnect = "^3.4"
openssl = '^0.10'
otpauth = '^0.5'
phpbb-pwhash = '^0.1'
prometheus-client = '^0.22'
rand = '^0.8'
rmp-serde = '^1.0'
rust-s3 = '^0.35'
serde_json = '^1.0'
serde_sqlite_jsonb = "0.1.0"
serde_urlencoded = '^0.7'
serde_with = { version = '^3.5', features = ["json", "chrono_0_4"] }
sha3 = '^0.10'
tokio-native-tls = '^0.3'
tokio-stream = { version = '^0.1', features = ["sync"] }
tokio-tungstenite = '^0.26'
toml = "0.8.19"

[dependencies.chrono]
version = '^0.4'
features = ['serde']

[dependencies.diesel]
version = "^2.2"
default-features = false
features = ["chrono", "sqlite", "r2d2", "serde_json", "returning_clauses_for_sqlite_3_35"]

[dependencies.hyper]
version = '^1.5'
features = [
    'client',
    'server',
    'http1',
]

[dependencies.spadina-core]
path = '../core'

[dependencies.serde]
version = '^1.0'
features = ['derive', 'rc']

[dependencies.sha1]
version = '^0.10'
features = ['std']

[dependencies.tokio]
version = '^1.39'
features = ['full']
