[package]
name = 'spadina-server'
version = '0.1.0'
authors = ['Andre Masella <andre@masella.name>']
edition = '2021'

[features]
default = ["mysql"]
wasm-client = []
mysql = ['diesel/mysql']

[dependencies]
addr = "^0.15"
argparse = '^0.2'
async-trait = "^0.1"
base16ct = {version = '^0.2', features = ['alloc']}
base64 = '^0.21'
bb8 = "^0.8"
byteorder = '^1.5'
bytes = '^1.5'
concat-arrays = '^0.1'
cooked-waker = '^5.0'
diesel_json = '^0.2'
diesel_migrations = '^2.1'
form_urlencoded = '^1.2'
futures = { version = '^0.3', features = ['alloc'] }
futures-batch = '^0.6'
futures-sink = '^0.3'
git-version = "^0.3"
google-cloud-storage = "^0.15"
hex = '^0.4'
horrorshow = '^0.8'
http-body-util = "^0.1"
hyper-tls = '^0.6'
hyper-util = '^0.1'
icalendar = '^0.16'
jsonwebtoken = '^9.2'
lazy_static = '^1.4'
ldap3 = '^0.11'
native-tls = '^0.2'
notify = '^6.1'
num-integer = '^0.1'
openidconnect = "^3.4"
openssl = '^0.10'
otpauth = '^0.4'
phpbb-pwhash = '^0.1'
pin-project = '^1.1'
prometheus-client = '^0.22'
rand = '^0.8'
rmp = '^0.8'
rmp-serde = '^1.0'
rust-s3 = '^0.33'
serde_json = '^1.0'
serde_urlencoded = '^0.7'
serde_with = { version = '^3.5', features = ["json", "chrono_0_4"] }
sha3 = '^0.10'
tokio-native-tls = '^0.3'
tokio-stream = { version = '^0.1', features = ["sync"] }
tokio-tungstenite = '^0.21'

[dependencies.chrono]
version = '^0.4'
features = ['serde']

[dependencies.diesel]
version = '^2.1'
default-features = false
features = [
    'chrono',
    'postgres',
    'r2d2',
]

[dependencies.hyper]
version = '^1.1'
features = [
    'client',
    'server',
    'http1',
]

[dependencies.spadina-core]
path = '../core'

[dependencies.serde]
version = '^1.0'
features = ['derive', 'rc']

[dependencies.sha1]
version = '^0.10'
features = ['std']

[dependencies.tokio]
version = '^1.35'
features = ['full']
